libspectre (0.2.2.ds-2) unstable; urgency=low

  * Switch maintainer to krap
  * Add me to uploaders
  * Autoreconf; fixes ftbfs. (Closes: 543074)

 -- Sune Vuorela <debian@pusling.com>  Tue, 01 Sep 2009 22:37:33 +0200

libspectre (0.2.2.ds-1) unstable; urgency=low

  * New upstream release.
    + Fixes rendering of Mozilla-generated files. (Closes: #484645)
    + Correctly loads EPS files with TIFF previews. (Closes: #490309)
  * Make prune-ghostscript script actually work.
  * Update Autotools instead of direct patching.
    + Add Build-Depends on autoconf, automake, and libtool.
    + Switch to from CDBS simple patch system to quilt.
    + Rewrite strip_ghostscript.patch as use-system-ghostscript.patch.
  * Bump Standards-Version to 3.8.0, no changes required.
  * Fix watch file.
  * Adjust descriptions.

 -- Matthew Rosewarne <mrosewarne@inoutbox.com>  Sun, 30 Nov 2008 17:33:29 -0500

libspectre (0.2.0.ds-1) unstable; urgency=low

  * New upstream release.
  * Removed ghostscript headers.
    - Patched build system to omit libspectre/ghostscript.

   +++ Changes by Ana Beatriz Guerrero Lopez:

   * Add prune-ghostscript script to remove ghostscript stuff.
   * Slight tweaking of debian/copyright.
   * Add Homepage field.

 -- Matthew Rosewarne <mrosewarne@inoutbox.com>  Sun, 06 Jan 2008 21:58:55 +0100

libspectre (0.1.0-1) unstable; urgency=low

  * Initial release (Closes: #456609).

 -- Matthew Rosewarne <mrosewarne@inoutbox.com>  Sun, 16 Dec 2007 17:07:19 -0500
