@@ -7,7 +7,15 @@ include /usr/share/cdbs/1/rules/patchsys-quilt.mk
 include /usr/share/cdbs/1/rules/utils.mk
 
 post-patches::
+	libtoolize -c -f
 	autoreconf
+clean::
+	rm -f config.h.in aclocal.m4
+#	[ ! -f Makefile ] || $(MAKE) maintainer-clean
+	find -name Makefile.in -delete
+	rm -f ltmain.sh
+	rm -f configure
+
 
 # Regenerate autotools files from patched files
 DEB_AUTO_UPDATE_AUTOCONF=2.61
